--- a/src/static/fonts/fonts.css
+++ b/src/static/fonts/fonts.css
@@ -1,54 +1,113 @@
+/* open-sans-regular - latin */
+/* open-sans-300 - latin */
 @font-face {
-  font-family: "HK Grotesk Extra Bold";
-  src: url("./HKGrotesk-ExtraBold.woff2") format("woff2"),
-    url("./HKGrotesk-ExtraBold.woff") format("woff");
-  /* font-weight: 800; */
+  font-family: "Open Sans Light";
   font-style: normal;
+  font-weight: 300;
+  src: local("Open Sans Light"), local("OpenSans-Light"),
+    url("./open-sans-v17-latin-300.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./open-sans-v17-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 @font-face {
-  font-family: "HK Grotesk Medium";
-  src: url("./HKGrotesk-Medium.woff2") format("woff2"),
-    url("./HKGrotesk-Medium.woff") format("woff");
+  font-family: "Open Sans Regular";
   font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans Regular"), local("OpenSans-Regular"),
+    url("./open-sans-v17-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./open-sans-v17-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* open-sans-600 - latin */
+@font-face {
+  font-family: "Open Sans SemiBold";
+  font-style: normal;
+  font-weight: 600;
+  src: local("Open Sans SemiBold"), local("OpenSans-SemiBold"),
+    url("./open-sans-v17-latin-600.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./open-sans-v17-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+/* open-sans-italic - latin */
 @font-face {
-  font-family: "HK Grotesk Normal";
-  src: url("./HKGrotesk-Regular.woff2") format("woff2"),
-    url("./HKGrotesk-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Open Sans Italic";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Open Sans Italic"), local("OpenSans-Italic"),
+    url("./open-sans-v17-latin-italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./open-sans-v17-latin-italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* open-sans-600italic - latin */
+@font-face {
+  font-family: "Open Sans SemiBold Italic";
+  font-style: italic;
+  font-weight: 600;
+  src: local("Open Sans SemiBold Italic"), local("OpenSans-SemiBoldItalic"),
+    url("./open-sans-v17-latin-600italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./open-sans-v17-latin-600italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+/* raleway-700 - latin */
 @font-face {
-  font-family: "HK Grotesk Light";
-  src: url("./HKGrotesk-Light.woff2") format("woff2"),
-    url("./HKGrotesk-Light.woff") format("woff");
-  /* font-weight: 300; */
+  font-family: "Raleway Bold";
   font-style: normal;
+  font-weight: 700;
+  src: local("Raleway Bold"), local("Raleway-Bold"),
+    url("./raleway-v14-latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./raleway-v14-latin-700.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
+/* raleway-700italic - latin */
 @font-face {
-  font-family: "HK Grotesk Black";
-  src: url("./HKGrotesk-Black.woff2") format("woff2"),
-    url("./HKGrotesk-Black.woff") format("woff");
-  /* font-weight: 900; */
-  font-style: normal;
+  font-family: "Raleway Bold Italic";
+  font-style: italic;
+  font-weight: 700;
+  src: local("Raleway Bold Italic"), local("Raleway-BoldItalic"),
+    url("./raleway-v14-latin-700italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./raleway-v14-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
+/* raleway-800 - latin */
 @font-face {
-  font-family: "HK Grotesk Bold";
-  src: url("./HKGrotesk-Bold.woff2") format("woff2"),
-    url("./HKGrotesk-Bold.woff") format("woff");
-  /* font-weight: bold; */
+  font-family: "Raleway ExtraBold";
   font-style: normal;
+  font-weight: 800;
+  src: local("Raleway ExtraBold"), local("Raleway-ExtraBold"),
+    url("./raleway-v14-latin-800.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./raleway-v14-latin-800.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
+/* raleway-800italic - latin */
 @font-face {
-  font-family: "HK Grotesk Semibold";
-  src: url("./HKGrotesk-SemiBold.woff2") format("woff2"),
-    url("./HKGrotesk-SemiBold.woff") format("woff");
-  /* font-weight: 600; */
+  font-family: "Raleway ExtraBold Italic";
+  font-style: italic;
+  font-weight: 800;
+  src: local("Raleway ExtraBold Italic"), local("Raleway-ExtraBoldItalic"),
+    url("./raleway-v14-latin-800italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./raleway-v14-latin-800italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* raleway-900 - latin */
+@font-face {
+  font-family: "Raleway Black";
   font-style: normal;
+  font-weight: 900;
+  src: local("Raleway Black"), local("Raleway-Black"),
+    url("./raleway-v14-latin-900.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./raleway-v14-latin-900.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* raleway-900italic - latin */
+@font-face {
+  font-family: "Raleway Black Italic";
+  font-style: italic;
+  font-weight: 900;
+  src: local("Raleway Black Italic"), local("Raleway-BlackItalic"),
+    url("./raleway-v14-latin-900italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("./raleway-v14-latin-900italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
